2005-09-28  Tor Lillqvist  <tml@novell.com>

	* libgimp/gimp.def: Fix typo.

2005-09-28  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/gqbist.c: use a single random number generator
	for the lifetime of the plug-in. Fixes bug #317355.

2005-09-28  Sven Neumann  <sven@gimp.org>

	* docs/Makefile.am
	* docs/keybindings.txt
	* docs/quick_reference.ps
	* docs/quick_reference.tar.gz: removed outdated documentation that
	is now being maintained in the user manual (bug #316423).

2005-09-28  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpscrolledpreview.c
	(gimp_scrolled_preview_nav_popup_expose): draw the rectangle
	according to the scrollbar adjustments.

2005-09-28  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpscrolledpreview.[ch]
	(gimp_scrolled_preview_set_position): must not set the adjustment
	value directly. Instead make sure that the scrollbar adjustments
	are uptodate and use gtk_adjustment_set_value().

2005-09-28  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimppreview.[ch]: renamed newly added function to
	gimp_preview_get_controls(). Increased row padding for controls.

	* libgimpwidgets/gimpwidgets.def
	* libgimp/gimpzoompreview.c: changed accordingly.

	* libgimpbase/gimputils.c (gimp_enum_get_value): ref the enum
	class instead of only peeking at it.

	* libgimpwidgets/gimpzoommodel.c (gimp_zoom_button_new): set a
	tooltip on zoom buttons that only show an icon.

2005-09-28  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimppreview.[ch]: added a hbox to the table and
	the "Update Preview" checkbutton there. Added a function to access
	this control box. Increased default size to 200.

	* libgimpwidgets/gimpscrolledpreview.[ch]: added function
	gimp_scrolled_preview_set_policy() to control when the scrollbars
	should be shown.

	* libgimpwidgets/gimpwidgets.def: updated.

	* libgimp/gimpzoompreview.c: pack the zoom buttons into the
	preview's control box. Commented out the label, it shows a bogus